# monitor-rs

./: Cargo.toml  TODO.md  build.rs
bins/collector/: Cargo.toml
bins/collector/src/: main.rs
bins/gtk-client/: Cargo.toml
bins/gtk-client/src/: main.rs
bins/web/: Cargo.toml  build.rs  package.json
bins/web/proto/: web_socket.proto
bins/web/src/: auth.rs  main.rs  session.rs
bins/web/src/handlers/: auth.rs  metrics.rs  mod.rs  websocket.rs
bins/web/static/: index.js  monitor_web_socket.js  style.css  util.js  web-notifier.js  web-socket.js
bins/web/templates/: base.html  hello.html  index.html  login.html
cert/: .gitignore  README.md  build-a-pki.sh  openssl.cnf
conf/: monitor-collector.service  monitor-web.service
conf/f1/: collector.rudano
conf/mf/: collector.rudano  web.rudano
conf/plato/: web.rudano
doc/: deploy_new_collector.md  deploy_new_daemon.md  shell_check_timeout.md
proto/: collector.proto  monitor_core_types.proto
scripts/: apt-upgradable.py
src/: collector_pool.rs  config.rs  core_types.rs  lib.rs  log_store.rs  main.rs  metric_store.rs  notifier.rs  remote.rs  remote_sync.rs  scheduler.rs  signal.rs  time_utils.rs
