[package]
name = "monitor"
version = "0.1.0"
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
env_logger = "0.7"
http = "0.2.1"
log = { version = "0.4.11" }
notify-rust = "4"
process_control = "2.0.2"
prost = "0.6.1"
rudano = "0.1.0"
serde = { version = "1.0.117", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
tonic = { version = "0.3.1", features = ["tls"] }

[build-dependencies]
tonic-build = "0.3.1"

[workspace]
members = [
    ".",
    "bins/collector",
    "bins/gtk-client",
    "bins/web",
]