[package]
name = "collector"
version = "0.1.0"
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
log = { version = "0.4.11" }
monitor = { path = "../.." }
rudano = "0.1.0"
tokio = { version = "0.2", features = ["full"] }
tonic = { version = "0.3.1", features = ["tls"] }
